client/css/less/components/ticket-list.less
// --------------------------------------
// Ticket List
// --------------------------------------

.ticket-list {
  .active {
    background: @activeBright;

    .unread { background: none !important; }
    h4, time, .title { color: @darkGray !important; }

    .attrs .tags li[class*="color-"] i {
      text-shadow: 1px 1px 0 fade(@black, 20%), 0 0 1px fade(@black, 20%);
    }
  }

  .ticket {
    cursor: pointer;
    border-bottom: 1px solid @border;

    .unread { background: @notifyBG; }

    .notify:before {
      content: "";
      display: block;
      position: absolute;
      top: 2px;
      left: 3px;
      bottom: 2px;
      width: 6px;
      background-color: lighten(@active, 15%);
    }

    .header {
      padding: 10px 20px;
      .clearfix;

      hgroup { width: 80%; }

      .attrs {
        float: right;
        width: 20%;

        time {
          display: block;
          margin: 0;
          font-weight: 400;
          font-size: 16px;
          text-align: right;
          white-space: nowrap;
        }

        .tags {
          .clearfix;
          position: relative;
          margin: 0;
          padding: 0;
          width: 100%;
          list-style: none;

          li {
            margin: 0;
            padding: 0;
            display: inline-block;
            float: right;
          }
        }
      }
    }

    .ticket-content .content {
      margin: 0;
      padding-bottom: 4px;
      max-height: 36px;

      > *:last-child {
        font-size: 12px;
        font-weight: 400;
        margin-bottom: 0;
        overflow: hidden;
        text-overflow: ellipsis;
      }
    }
  }
}

